force-app/main/default/objects/ESS_Application__c.object
<CustomObject>
    <fields>
        <fullName>Address_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Current_Address_Copy_Id__c</fullName>
        <label>Address Current Address Copy Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Current_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Current Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_New_District__c</fullName>
        <label>Address EN Current New District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_New_House_No__c</fullName>
        <label>Address EN Current New House No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_New_Moo__c</fullName>
        <label>Address EN Current New Moo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_New_Postal_Code__c</fullName>
        <label>Address EN Current New Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_New_Province__c</fullName>
        <label>Address EN Current New Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_New_Road__c</fullName>
        <label>Address EN Current New Road</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_New_Soi__c</fullName>
        <label>Address EN Current New Soi</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_New_Sub_District__c</fullName>
        <label>Address EN Current New Sub District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_New_Telephone_No__c</fullName>
        <label>Address EN Current New Telephone No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_New_Village_Name__c</fullName>
        <label>Address EN Current New Village Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_Old_House_No__c</fullName>
        <label>Address EN Current Old House No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_Old_Moo_Vill_Soi_Road__c</fullName>
        <label>Address EN Current Old Moo Vill Soi Road</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_Old_Postal_Code__c</fullName>
        <label>Address EN Current Old Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_Old_Province__c</fullName>
        <label>Address EN Current Old Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_Old_SubDis_District__c</fullName>
        <label>Address EN Current Old SubDis District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Current_Old_Telephone_No__c</fullName>
        <label>Address EN Current Old Telephone No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_New_District__c</fullName>
        <label>Address EN New District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_New_House_No__c</fullName>
        <label>Address EN New House No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_New_Moo__c</fullName>
        <label>Address EN New Moo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_New_Postal_Code__c</fullName>
        <label>Address EN New Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_New_Province__c</fullName>
        <label>Address EN New Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_New_Road__c</fullName>
        <label>Address EN New Road</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_New_Soi__c</fullName>
        <label>Address EN New Soi</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_New_Sub_District__c</fullName>
        <label>Address EN New Sub District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_New_Telephone_No__c</fullName>
        <label>Address EN New Telephone No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_New_Village_Name__c</fullName>
        <label>Address EN New Village Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Old_House_No__c</fullName>
        <label>Address EN Old House No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Old_Moo_Village_Soi_Road__c</fullName>
        <label>Address EN Old Moo Village Soi Road</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Old_Postal_Code__c</fullName>
        <label>Address EN Old Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Old_Province__c</fullName>
        <label>Address EN Old Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Old_SubDistrict_District__c</fullName>
        <label>Address EN Old SubDistrict District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_Old_Telephone_No__c</fullName>
        <label>Address EN Old Telephone No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_House_Registration_Copy_Id__c</fullName>
        <label>Address House Registration Copy Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_New_District__c</fullName>
        <label>Address TH Current New District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_New_House_No__c</fullName>
        <label>Address TH Current New House No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_New_Moo__c</fullName>
        <label>Address TH Current New Moo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_New_Postal_Code__c</fullName>
        <label>Address TH Current New Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_New_Province__c</fullName>
        <label>Address TH Current New Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_New_Road__c</fullName>
        <label>Address TH Current New Road</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_New_Soi__c</fullName>
        <label>Address TH Current New Soi</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_New_Sub_District__c</fullName>
        <label>Address TH Current New Sub District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_New_Telephone_No__c</fullName>
        <label>Address TH Current New Telephone No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_New_Village_Name__c</fullName>
        <label>Address TH Current New Village Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_Old_House_No__c</fullName>
        <label>Address TH Current Old House No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_Old_Moo_Vill_Soi_Road__c</fullName>
        <label>Address TH Current Old Moo Vill Soi Road</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_Old_Postal_Code__c</fullName>
        <label>Address TH Current Old Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_Old_Province__c</fullName>
        <label>Address TH Current Old Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_Old_SubDis_District__c</fullName>
        <label>Address TH Current Old SubDis District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Current_Old_Telephone_No__c</fullName>
        <label>Address TH Current Old Telephone No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_New_District__c</fullName>
        <label>Address TH New District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_New_House_No__c</fullName>
        <label>Address TH New House No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_New_Moo__c</fullName>
        <label>Address TH New Moo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_New_Postal_Code__c</fullName>
        <label>Address TH New Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_New_Province__c</fullName>
        <label>Address TH New Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_New_Road__c</fullName>
        <label>Address TH New Road</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_New_Soi__c</fullName>
        <label>Address TH New Soi</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_New_Sub_District__c</fullName>
        <label>Address TH New Sub District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_New_Telephone_No__c</fullName>
        <label>Address TH New Telephone No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_New_Village_Name__c</fullName>
        <label>Address TH New Village Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Old_House_No__c</fullName>
        <label>Address TH Old House No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Old_Moo_Village_Soi_Road__c</fullName>
        <label>Address TH Old Moo Village Soi Road</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Old_Postal_Code__c</fullName>
        <label>Address TH Old Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Old_Province__c</fullName>
        <label>Address TH Old Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Old_SubDistrict_District__c</fullName>
        <label>Address TH Old SubDistrict District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH_Old_Telephone_No__c</fullName>
        <label>Address TH Old Telephone No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HouseRegistration</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_JSON__c</fullName>
        <label>Child JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Updated to SAP / Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Person_JSON__c</fullName>
        <label>Contact Person JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Death_Child_JSON__c</fullName>
        <label>Death Child JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Death_Father_Detail__c</fullName>
        <label>Death Father Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Father_Doc_Id__c</fullName>
        <label>Death Father Doc Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Father_Doc_Issue_Date__c</fullName>
        <label>Death Father Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Death_Father_Doc_Issue_Location__c</fullName>
        <label>Death Father Doc Issue Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Father_Doc_Issue_Province__c</fullName>
        <label>Death Father Doc Issue Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Father_Doc_No__c</fullName>
        <label>Death Father Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Father_FN__c</fullName>
        <label>Death Father FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Father_LN__c</fullName>
        <label>Death Father LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Father_Title__c</fullName>
        <label>Death Father Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Death_Is_Child_Death__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Death Is Child Death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Death_Is_Father_Death__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Death Is Father Death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Death_Is_Marriage_Death__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Death Is Marriage Death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Death_Is_Mother_Death__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Death Is Mother Death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Death_Marriage_Doc_Id__c</fullName>
        <label>Death Marriage Doc Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Marriage_Doc_Issue_Date__c</fullName>
        <label>Death Marriage Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Death_Marriage_Doc_Issue_Location__c</fullName>
        <label>Death Marriage Doc Issue Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Marriage_Doc_Issue_Province__c</fullName>
        <label>Death Marriage Doc Issue Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Marriage_Doc_No__c</fullName>
        <label>Death Marriage Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Marriage_FN__c</fullName>
        <label>Death Marriage FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Marriage_LN__c</fullName>
        <label>Death Marriage LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Marriage_Title__c</fullName>
        <label>Death Marriage Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>MIss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Death_Mother_Detail__c</fullName>
        <label>Death Mother Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Mother_Doc_Id__c</fullName>
        <label>Death Mother Doc Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Mother_Doc_Issue_Date__c</fullName>
        <label>Death Mother Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Death_Mother_Doc_Issue_Id__c</fullName>
        <label>Death Mother Doc Issue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Mother_Doc_Issue_Location__c</fullName>
        <label>Death Mother Doc Issue Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Mother_Doc_Issue_Province__c</fullName>
        <label>Death Mother Doc Issue Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Mother_Doc_No__c</fullName>
        <label>Death Mother Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Mother_FN__c</fullName>
        <label>Death Mother FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Mother_LN__c</fullName>
        <label>Death Mother LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Mother_Title__c</fullName>
        <label>Death Mother Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degree</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_No__c</fullName>
        <label>Document No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_JSON__c</fullName>
        <label>Education JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education_Level__c</fullName>
        <label>Education Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Education_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field_of_Study__c</fullName>
        <label>Field of Study</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Field_of_Study</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <label>Institution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Institution</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Change_LN_After_Divorced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Change LN After Divorced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Change_LN_After_Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Change LN After Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Change_LN_After_Widow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Change LN After Widow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Change_Title_After_Divorced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Change Title After Divorced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Change_Title_After_Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Change Title After Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Change_Title_After_Widow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Change Title After Widow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Marriage_As_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Marriage As Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_ContactPerson__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update ContactPerson</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Death__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Marriage_As_Well__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Marriage As Well</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Citizen_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Citizen Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Citizen_Copy_Doc__c</fullName>
        <label>License Citizen Copy Doc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Citizen_Id__c</fullName>
        <label>License Citizen Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Citizen_New_Expire_Date__c</fullName>
        <label>License Citizen New Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Citizen_New_Issue_Date__c</fullName>
        <label>License Citizen New Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Citizen_New_Issue_Province__c</fullName>
        <label>License Citizen New Issue Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Citizen_Old_Expire_Date__c</fullName>
        <label>License Citizen Old Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Citizen_Old_Issue_Date__c</fullName>
        <label>License Citizen Old Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Citizen_Old_Issue_Province__c</fullName>
        <label>License Citizen Old Issue Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Professional_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Professional Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Professional_Id__c</fullName>
        <label>License Professional Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Professional_New_Doc_Expire_Date__c</fullName>
        <label>License Professional New Doc Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Professional_New_Doc_Issue_Date__c</fullName>
        <label>License Professional New Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Professional_New_Doc_Level__c</fullName>
        <label>License Professional New Doc Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Professional_New_Doc_No__c</fullName>
        <label>License Professional New Doc No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Professional_New_Engineer__c</fullName>
        <label>License Professional New Engineer</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Professional_Old_Doc_Expire_Date__c</fullName>
        <label>License Professional Old Doc Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Professional_Old_Doc_Issue_Date__c</fullName>
        <label>License Professional Old Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Professional_Old_Doc_Level__c</fullName>
        <label>License Professional Old Doc Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Professional_Old_Doc_No__c</fullName>
        <label>License Professional Old Doc No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Professional_Old_Engineer__c</fullName>
        <label>License Professional Old Engineer</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Change_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Name Change Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Change_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Name Change Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Change_Father__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Name Change Father</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Change_Marriage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Name Change Marriage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Change_Mother__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Name Change Mother</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Child_Count__c</fullName>
        <label>Name Child Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_Child_JSON__c</fullName>
        <label>Name Child JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_Emp_Change_Doc_Date__c</fullName>
        <label>Name Emp Change Doc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_Emp_Change_Doc_Id__c</fullName>
        <label>Name Emp Change Doc Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_Change_Doc_Location__c</fullName>
        <label>Name Emp Change Doc Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_Change_Doc_No__c</fullName>
        <label>Name Emp Change Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_Change_Doc_Province__c</fullName>
        <label>Name Emp Change Doc Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_Citizen_Copy_Id__c</fullName>
        <label>Name Emp Citizen Copy Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_EN_New_FN__c</fullName>
        <label>Name Emp EN New FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Emp_EN_New_LN__c</fullName>
        <label>Name Emp EN New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>